--- a/finalProject.css
+++ b/finalProject.css
@@ -68,9 +68,33 @@ li a:hover {
     height: 300px; /* Should be removed. Only for demonstration */
 }
 
-/* Clear floats after the columns */
+/*Clear floats after the columns */
 .row:after {
-    content: "";
+    content: "group.jpg";
     display: table;
     clear: both;
+}
+
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.hero-image {
+  background-image: url("group.jpg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
