--- a/finalProject.css
+++ b/finalProject.css
@@ -26,7 +26,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     font-size: 28px;
 }
 
-/* ul { */
+ul { 
   list-style-type: none;
   margin: 0;
   padding: 0;
