--- a/finalProject.css
+++ b/finalProject.css
@@ -4,6 +4,7 @@
   width: 200px;
   height: 100px;
   background: #555;
+
 }
 
 .header h1 {
@@ -13,8 +14,16 @@
   left: 10px;
 }
 
+.w3-black w3-xlarge w3-padding-3{
+  z-index: -1;
+}
 
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+
+body, h1,h2,h3,h4,h5,h6 {
+  font-family: "Montserrat", sans-serif
+}
+
+
 .w3-row-padding img {margin-bottom: 12px}
 .bgimg {
     background-position: center;
@@ -28,14 +37,18 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   overflow: hidden;
   background-color: #333;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
+  width: 100%;
+  z-index: 500;
 }
+
+
 
 li {
   float: left;
