--- a/finalProject.css
+++ b/finalProject.css
@@ -49,7 +49,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .bgimg {
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-image: url('rally.jpg');
     min-height: 100%;
 
