--- a/finalProject.css
+++ b/finalProject.css
@@ -112,8 +112,9 @@ body, html {
 }
 
 .hero-image {
+  margin-top: 50px;
   background-image: url("group.jpg");
-  height: 50%;
+  height: 65%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
