--- a/finalProject.css
+++ b/finalProject.css
@@ -31,7 +31,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #fffdfcff;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
