--- a/finalProject.css
+++ b/finalProject.css
@@ -17,10 +17,6 @@
   font-size: 17px;
 }
 
-.navbar a:hover {
-  background: grey;
-  color: white;
-}
 
 .main {
   padding: 16px;
@@ -52,32 +48,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     background-size: contain;
     background-image: url('rally.jpg');
     min-height: 100%;
-
-    font-size: 28px;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
-  }
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
 
 li a:hover {
   background-color: #111;
@@ -86,7 +58,7 @@ li a:hover {
 .active {
   background-color: #4CAF50;
 }
-* {
+ {
     box-sizing: border-box;
 }
 
