--- a/finalProject.css
+++ b/finalProject.css
@@ -85,8 +85,8 @@ body, html {
 
 .hero-image {
   margin-top: 50px;
-  background-image: url("group.jpg");
-  height: 65%;
+  background-image: url("US.jpg");
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
