--- a/finalProject.css
+++ b/finalProject.css
@@ -17,13 +17,9 @@
   font-size: 17px;
 }
 
-.navbar a:hover {
-  background: grey;
-  color: white;
-}
 
 .main {
-  padding: 16px 16px 16px 0;
+  padding: 16px;
   margin-top: 30px;
   height: 1500px; /* Used in this example to enable scrolling */
 }
@@ -41,4 +37,67 @@
   position: relative;
   top: 18px;
   left: 10px;
+}
+
+
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+.w3-row-padding img {margin-bottom: 12px}
+.bgimg {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('rally.jpg');
+    min-height: 100%;
+}
+
+
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+ {
+    box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/*Clear floats after the columns */
+.row:after {
+    content: "group.jpg";
+    display: table;
+    clear: both;
+}
+
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.hero-image {
+  margin-top: 50px;
+  background-image: url("group.jpg");
+  height: 65%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
